API reference injection
Taridocs-plugin successfully injects the API referece into the docs
folder.

TODO - Language tabs
     - Correct frontmatter
     - Some headings are borked

--- a/taridocs-plugin/package.json
+++ b/taridocs-plugin/package.json
@@ -12,6 +12,8 @@
     "debug": "^4.1.1",
     "rimraf": "^3.0.2",
     "superagent": "^6.1.0",
+    "traverse": "^0.6.6",
+    "valid-url": "^1.0.9",
     "widdershins": "^4.0.1"
   }
 }
