Integrate plugin actions with CLI

--- a/yat-docs/package.json
+++ b/yat-docs/package.json
@@ -6,8 +6,12 @@
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
     "build": "docusaurus build",
-    "clean": "docusaurus clean-sdk",
-    "generate": "docusaurus generate-sdk",
+    "clean-sdk": "docusaurus clean-sdk",
+    "generate-sdk": "docusaurus generate-sdk",
+    "clean-api-ref": "docusaurus clean-api-ref",
+    "generate-api-ref": "docusaurus generate-api-ref",
+    "clean-docs": "docusaurus clean-docs",
+    "generate-docs": "docusaurus generate-docs",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "serve": "docusaurus serve"
