--- a/taridocs-plugin/package.json
+++ b/taridocs-plugin/package.json
@@ -14,6 +14,6 @@
     "superagent": "^6.1.0",
     "traverse": "^0.6.6",
     "valid-url": "^1.0.9",
-    "widdershins": "^4.0.1"
+    "widdershins": "github:tari-labs/widdershins"
   }
 }
