Added API doc template for Kotlin based on OkHttp.

--- a/yat-docs/sdk_generator_opts.yml
+++ b/yat-docs/sdk_generator_opts.yml
@@ -130,3 +130,4 @@ kotlin:
   # Whether to use the RxJava3 adapter with the retrofit2 library. (Default: false)
   useRxJava3: false
   disableHtmlEscaping: true
+swift5:
