--- a/yat-docs/package.json
+++ b/yat-docs/package.json
@@ -21,6 +21,7 @@
     "@docusaurus/preset-classic": "2.0.0-alpha.63",
     "@mdx-js/react": "^1.5.8",
     "clsx": "^1.1.1",
+    "prism-react-renderer": "^1.1.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "yaml": "^1.10.0"
