--- a/yat-docs/demos/package.json
+++ b/yat-docs/demos/package.json
@@ -17,6 +17,10 @@
   },
   "homepage": "https://github.com/tari-labs/tari-docs#readme",
   "dependencies": {
+    "@otplib/core": "^12.0.1",
+    "@otplib/plugin-crypto": "^12.0.1",
+    "base32": "0.0.6",
+    "otplib": "^12.0.1",
     "tari_crypto": "^0.2.1",
     "yatjs": "../sdks/nodejs"
   }
