parent de86c2d8fb92a73a9bc5b38221e7a42b11c57b3f author kutsal kaan bilgin <kutsalbilgin@gmail.com> 1602079971 +0300 committer CjS77 <CjS77@users.noreply.github.com> 1617278025 +0200 gpgsig -----BEGIN PGP SIGNATURE-----
 iQIzBAABCAAdFiEEmjUYKFgb22/DLAA3a1A2Yva1XOIFAmBltEkACgkQa1A2Yva1
 XOJwFw//ZYuIWwu/+nKcJv81xZZ2rEmAgOx4KU0nAGKRMbrVd5Yu2z11AXlnIOYj
 jw+ZeYz1h/6IXKoRNhWYh02fCDEh292u3LeFBTFWeFp6WwsSDF84OtI74C20Z6K6
 nNrEv1u4Xfm1pUJKAPmo9y6hzJ/g2EeFyLYXc2yEs5eKCH0UHwBS04CLQYC+gHuH
 JOFu6IuCbbMFPCWsOdMiAXVmxHZDN16ba/Knli5s77g1fG54iJstatKs94zor9NP
 Oa15GeAS5jkIoPHsirWg9hhCaUt6/eRCvZzQVT7n997+IribVkBRmq4d/TNs0/LS
 JNU21zonbLmZU0cX3JeITkx4++nyrfAmQI/VrHOo2aaddzMiW4ykWzQSnNyHb1WX
 M50z8iogX1VAdIZdkL6IDINKRtT8PofkcvPtwJjHccDTmS0BEzL7Q0h+Qb1W3BA0
 sN39eg38qVqCdHQxhxV6nr/s/7KT1fsT+EKpWX5HYOPiK9org/7kNv2c2tyXGBLs
 UxGS/TtwFirJyGnfp90OvXmU9j82je5HqybsiMWd/Fl/1CX9O+S+O5+Z87NrtX4t
 wq67rPDQVLZn6EmbR6vx0FjVQI7B4HnMb0UBu0LGbvlIPyX6TA0Ys1/3ZD3d0H2s
 lGEKgcyKCXotfiYEsvuj/yXrZyniPpaCWKPPZgscgzwGIAryGw8=
 =+Qko
 -----END PGP SIGNATURE-----

Kotlin SDK generation fixes and documentation updates. (#5)

Co-authored-by: Cayle Sharrock <CjS77@users.noreply.github.com>

Fix doc errors after merge

Fix links

Remove generated docs from VCS

I didn't realise how difficult PR reviews would be with the docs
included.

Bad call including them on my part

Minor edits

Create api-reference folder if it doesn't exist

Fix js template to work with new jar

--- a/yat-docs/sdk_generator_opts.yml
+++ b/yat-docs/sdk_generator_opts.yml
@@ -70,7 +70,7 @@ kotlin:
   # suffix for api classes (Default: Api)
   apiSuffix: Api
   # Generated artifact id (name of jar). (Default: kotlin-client)
-  artifactId: kotlin-client
+  artifactId: yat-sdk
   # Generated artifact's package version. (Default: 1.0.0)
   artifactVersion: 1.0.0
   # Option. Collection type to use (Default: list)
@@ -88,7 +88,7 @@ kotlin:
   # (Default: camelCase)
   enumPropertyNaming: camelCase
   # Generated artifact package's organization (i.e. maven groupId). (Default: org.openapitools)
-  groupId: com.tarilabs
+  groupId: com.tarilabs.yat
   # Library template (sub-template) to use (Default: jvm-okhttp4)
   #   jvm-okhttp4 - Platform: Java Virtual Machine.
   #                 HTTP client: OkHttp 4.2.0 (Android 5.0+ and Java 8+).
@@ -104,9 +104,9 @@ kotlin:
   #Create mutable models (Default: false)
   modelMutable: false
   # Generated artifact package name. (Default: org.openapitools.client)
-  packageName: com.tarilabs.client
+  packageName: com.tarilabs.yat
   # toggle "@Parcelize" for generated models
-  parcelizeModels: true
+  parcelizeModels: false
   # JVM-Option. Defines in how to handle date-time objects that are used for a request (as query or parameter)
   #   toJson - [DEFAULT] Date formater option using a json converter.
   #   toString - Use the 'toString'-method of the date-time object to retrieve the related string representation.
