--- a/yat-docs/package.json
+++ b/yat-docs/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@docusaurus/core": "^2.0.0-beta",
     "@docusaurus/preset-classic": "^2.0.0-beta",
+    "@easyops-cn/docusaurus-search-local": "^0.19.1",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.1.1",
     "prism-react-renderer": "^1.2.0",
