Updated templates for API and YatLib files and docs.
- Updated templates used in API and YatLib documentations.
- Updated OpenAPI generator logic to generate code in the more modern way.
- Removed unused files.

--- a/yat-docs/sdk_generator_opts.yml
+++ b/yat-docs/sdk_generator_opts.yml
@@ -210,7 +210,7 @@ swift5:
   #prependFormOrBodyParameters:
 
   # Project name in Xcode
-  projectName: YatSDK
+  projectName: YatLib
 
   # Make properties readonly (default: false)
   readonlyProperties: false
@@ -226,3 +226,5 @@ swift5:
 
   # Flag to make all the API classes inner-class of {{projectName}}API
   #swiftUseApiNamespace:
+
+  additionalGeneratorOptions: --reserved-words-mappings get=get,default=\`default\` --global-property models,apis,supportingFiles=README.md
